# parallel-portfolio-optimization

./: .gitignore  CMakeLists.txt  Future_Work.md  LICENSE  README.md  cuda_guide.md
data/: monthly_returns.csv
python/: datascraping.py
src/: constants.cuh  constants.h  functors.cuh  main.cpp  main.cu  matrix_solve.h  matsol_thrust.cu  matsol_thrust.cuh  mvo.cpp  mvo.cu  mvo.cuh  mvo.h  mvo_thrust.cu  mvo_thrust.cuh  utils.h
tests/: matrix_solve_test.cpp  matrix_solve_test.cu
